# goldfish-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 13344ac0b789_consolidate_migrations.py  477950fe996b_consolidate_migrations.py  867a7f611a7f_create_main_columns.py  87545c95c7f8_consolidate_migrations.py
docs/: ARCHITECTURE.md  backend-dependency-injection.md  goldfish-api-endpoints.md  team-task-breakdown (1).md  team-task-breakdown.md
src/app/: main.py
src/app/api/: projects.py  reminders.py  reports.py  search.py  settings.py  tags.py  tasks.py  views.py
src/app/core/: config.py  deps.py
src/app/db/: schema.py  session.py
src/app/models/: project.py  reminder.py  report.py  settings.py  tag.py  task.py
src/app/services/: ai_client.py  base.py  projects.py  reminders.py  reports.py  search.py  settings.py  tags.py  tasks.py  views.py
src/tests/: conftest.py
src/tests/integration/: test_projects_integration.py  test_reminders_integration.py  test_search_integration.py  test_tags_integration.py  test_tasks_integration.py  test_views_integration.py
